ingress-nginx/test/dask1-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dask-ingress
  namespace: afis
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - dask1.test.hvl.io
    secretName: htest-hvl-io
  rules:
  - host: dask1.test.hvl.io
    http:
      paths:
      - path: /
        pathType: Prefix        
        backend:
          service:
            name: test-cl-0-scheduler
            port:
              number: 80
