ingress-nginx/test/minio-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - minio.test.hvl.io
    secretName:	htest-hvl-io
  rules:
  - host: minio.test.hvl.io
    http:
      paths:
      - path: /
        pathType: Prefix        
        backend:
          service:
            name: minio
            port:
              name: http
